2023-01-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* Add missing closing parenthesis

2023-01-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* snap.php: don't misrecognize lines beginning with
	  numbers as failure counts

2022-11-13 Philipp Klaus Krause <pkk AT spth.de>

	* snapshots.desc/aarch64-linux-gnu.desc:
	  Desciption Debian GNU/Linux on AArch 64 machine.

2020-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* snapshots.desc:
	  Bring compile farm machine descriptions into repo.

2022-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Announce SDCC 4.2.0 release.

2022-02-28 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Added News - SDCC 4.2.0 RC2,
	  updated decription.

2022-02-22 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Added News - SDCC 4.2.0 RC1.

2021-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* links.php:
	  The GameBoy's CPU core is the SM83, also used in some Sharp microcontrollers.

2021-03-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* index.php: NEWS: 4.1.0 released

2021-02-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* index.php: NEWS: 4.1.0-RC1
	* previous.php: rollover 3.8.0 release news

2020-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Change state of pic targets from "in development" in "unmaintained".

2020-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* left_menu.inc:
	  Ohloh is no more, point link to sucessor project Open Hub instead.

2020-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* left_menu.inc:
	  Add links for issue trackers and mailing lists.

2020-02-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* index.php:
	  Fix a whitespace typo.

2020-02-01 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Fix 4.0.0 release year.

2020-01-30 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Added News - SDCC 4.0.0 release.
